Show registry block details in palette

--- a/packages/frontend/src/index.html
+++ b/packages/frontend/src/index.html
@@ -95,6 +95,12 @@
         font-size: 0.8rem;
         color: #94a3b8;
       }
+      .palette-card small {
+        display: block;
+        margin-top: 0.25rem;
+        color: #cbd5f5;
+        font-size: 0.75rem;
+      }
     </style>
   </head>
   <body>
